@@ -1,0 +1,28 @@
+PREHOOK: query: DESCRIBE FUNCTION weekofyear
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION weekofyear
+POSTHOOK: type: DESCFUNCTION
+weekofyear(date) - Returns the week of the year of the given date. A week is considered to start on a Monday and week 1 is the first week with >3 days.
+PREHOOK: query: DESCRIBE FUNCTION EXTENDED weekofyear
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION EXTENDED weekofyear
+POSTHOOK: type: DESCFUNCTION
+weekofyear(date) - Returns the week of the year of the given date. A week is considered to start on a Monday and week 1 is the first week with >3 days.
+Examples:
+  > SELECT weekofyear('2008-02-20') FROM src LIMIT 1;
+  8
+  > SELECT weekofyear('1980-12-31 12:59:59') FROM src LIMIT 1;
+  1
+PREHOOK: query: SELECT weekofyear('1980-01-01'), weekofyear('1980-01-06'), weekofyear('1980-01-07'), weekofyear('1980-12-31'),
+weekofyear('1984-1-1'), weekofyear('2008-02-20 00:00:00'), weekofyear('1980-12-28 23:59:59'), weekofyear('1980-12-29 23:59:59')
+FROM src LIMIT 1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/data/users/pyang/yearweek/trunk/VENDOR.hive/trunk/build/ql/tmp/647339969/10000
+POSTHOOK: query: SELECT weekofyear('1980-01-01'), weekofyear('1980-01-06'), weekofyear('1980-01-07'), weekofyear('1980-12-31'),
+weekofyear('1984-1-1'), weekofyear('2008-02-20 00:00:00'), weekofyear('1980-12-28 23:59:59'), weekofyear('1980-12-29 23:59:59')
+FROM src LIMIT 1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/data/users/pyang/yearweek/trunk/VENDOR.hive/trunk/build/ql/tmp/647339969/10000
+1	1	2	1	52	8	52	1
